Commit tela de parabens

--- a/app/src/main/res/layout/activity_lista_pacotes.xml
+++ b/app/src/main/res/layout/activity_lista_pacotes.xml
@@ -9,7 +9,7 @@
         android:id="@+id/lista_pacotes_banner_inicial"
         android:layout_width="0dp"
         android:layout_height="120dp"
-        android:contentDescription="@string/banner_inicial_dos_pacotes"
+        android:contentDescription="@string/banner_inicial"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
